correcciones para ios  e idiomas

--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,5 +1,5 @@
-<ion-card color="dark">
 
-  <ion-img [src]="'http://beta.sardarabad.com.ar/'+noticia.imageUrl"></ion-img>
+<div style="text-align: center; width: 300px; margin: auto;">
+  <img [src]="'http://beta.sardarabad.com.ar/'+noticia.imageUrl"/>
+</div>
 
-</ion-card>
