--- a/src/app/pages/nota/nota.page.scss
+++ b/src/app/pages/nota/nota.page.scss
@@ -9,3 +9,14 @@
     font-size: 20px !important;
 }
 
+.logo {
+    margin: 5px 30px !important;
+}
+
+.videoTitulo {
+  padding: 15px 8px; 
+}
+.videoNota {
+    width: 100%;
+    height: 250px;
+}
